<resources>

    <string name="app_name">Hearthstone Property Management</string>

    <string name="sell">sell</string>

    <string name="rent">rent</string>

    <string name="news">news</string>

    <string name="contactString">contact</string>

    <string name="purchaseString">Properties available to purchase</string>

    <string name="emailContent">Good after noon william i would like to give you a million dollars,  jokes aside this will become a templete for people with questions about specific properties</string>

    <string name="emailSubject">Regarding your properties</string>

    <string name="beds">Beds</string>

    <string name="baths">Baths</string>

    <string name="square_feet">SQ feet</string>

    <string name="View_of_house">View of house</string>

    <string name="available_houses_to_purchase">buy buy buy</string>

    <string name="available_rentals">rent rent rent</string>

    <string name="news_header">news</string>

    <string name="unavailable">unavailable</string>

    <string name="min_price">Min Price</string>

    <string name="max_price">Max Price</string>

    <string name="price_range">Select Price Range</string>

    <string name="required_features">required features</string>

    <string name="sq_ft_range">SQ. FT Range</string>

    <string name="prompt_no_min">no min</string>

    <string name="prompt_no_max">no Max</string>

    <string name="any">any</string>

    <string name="fireplace">fireplace</string>

    <string name="garage">Garage</string>

    <string name="property_type">property type</string>

    <string name="house">house</string>

    <string name="condo">condo</string>

    <string name="house_condo">house/condo</string>

    <string name="view_all">view all</string>

    <string name="rental_propety_search">Property Search</string>

    <string name="search">search</string>

    <string name="location">location</string>

    <string name="clovis">Clovis</string>

    <string name="city">City</string>

    <string name="portales">Portales</string>

    <string name="additional_options">additional options</string>

    <string name="waxLabel">History of Sealing Wax</string>

    <string name="aboutUs">Hearthstone Property Mgt, LLC working with HOMESPOT Property Management, and Real Estate, LLCs, offers a dynamic and up-scale customer service experience. Safeguarding owners investments while also providing superior concierge style service to tenants and owners. In the spirit of true entrepreneurship we strive for unique ideas and opportunities. Come to us first for all of your Home Buying, Leasing or Investment Property needs.</string>

    <string name="sealingWaxP1">Would you be interested int he history of seals, which have been traced back to Anno Domini 930?</string>
    <string name="sealingWaxP2">Since the time immemorial, the seal has served as a stamp of indisputable authenticity, just as a signature is accepted in the world today. The use of seals can be traced back to the Old Testament, where it mentions that Jezabel used Ahab\'s seal to counterfeit important documents. Seals were first used by Kings and governments long ago.</string>
    <string name="sealingWaxP3">The first Great Seal of England was that of Edward the Confessor, impressions of which can still be found. New laws and proclamations required the authoritative stamp of a seal. During Medieval Times, almost everyone had their own Seal, but Royalty would own several, including their own "Great Seal", as well as seals for all their courts and officials. It was common practice to destroy a person\'s seal once the owner died; hence the reason so few original seals have survived.</string>
    <string name="sealingWaxP4">Official Seals of the Crown were often handed over with great ceremony, and in Medieval Times the size of the motif of the Seal conveyed an image of the status of its owner. Early motifs were equestrian or heraldic in nature, or showed the owner in various pursuits like hunting or doing battle. William the Conqueror used an equestrian seal showing him armed and ready for battle.</string>
    <string name="sealingWaxP5">Long ago, betrothals were pre-arranged therefore true houses of love were secretly written and the envelop\'s contents was secured by a wax seal, so that the recipient could be assured that their passion would be unknown to others. A broken wax seal implied broken trust…and no person of integrity would tamper with a wax emblem.</string>
    <string name="sealingWaxP6">Benjamin Franklin, John Adams and Thomas Jefferson created the first seal of the United States on July 4th, 1776, immediately after the Declaration of Independence was signed. Congress realized the necessity of such a seal for the newly established nation.</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="need_help_selling_your_home">Need help Selling your home?</string>
    <string name="a_lot_of_sellers">A lot of sellers simply go back to the broker who sold them the house—and that is great if your broker gave you a smooth buying experience. If you would like a professional, knowledgeable and attentive broker this is the place to start. Please give us a call or email so we can set up an appointment and talk about a strategy that is best for you.</string>
    <string name="buy">Buy</string>
    <string name="contactUsString">contact us</string>
    <string name="AboutUs">About Us</string>
    <string name="we_manage">We manage upper scale properties with a unique concierge service to tenant and owner!</string>
    <string name="AboutUsSpeach">William “Butch” Bartram retired from the Air Force in 2012 after serving 24 years for his country. He earned a degree with the Community College of the Air Force in Resource Management, and also has a certification in Executive Leadership and Management with the University of Notre Dame. Butch, as most people call him, has also been a leader in our local community. He has been a member of the Chamber of Commerce and has also held the Vice President position in the Portales Main Street Program. A genuine servant’s heart, Butch wants to help families who are new to the area find their new home. With hard work, Butch received his REALTOR’S license in 2016 and believes that you can’t have too much customer service. Whether you’re buying or selling a home, wanting to rent your home, or needing a home to rent, Butch is ready to help. He is your go to man for all things housing.</string>
    <string name="call">Call</string>
    <string name="email">email</string>
    <string name="animas">Animas</string>


</resources>
